--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: minima
-title: "Architect's Palette", author: "Laszlo Andrasi, AIA", and description:"Personal site of Laszlo Andrasi, intended to be used to share interesting developments in Architecture, along with personal content sharing."
+title: "Architect's Palette"
+author: "Laszlo Andrasi, AIA"
+description: "Personal site of Laszlo Andrasi, intended to share interesting developments in Architecture, along with personal content."
